<resources>
    <string name="app_name">Catch a Shift</string>
    <string name="title_welcom">Bienvenido</string>
    <string name="title_welcom_to">a</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_login_email">E-mail</string>
    <string name="title_login_password">Contraseña</string>
    <string name="title_sign_in">INICIAR SESIÓN</string>
    <string name="title_Or">O</string>
    <string name="title_Linkedin">LINKEDIN</string>
    <string name="title_ForgotPassword">¿Olvidó su contraseña?</string>
    <string name="title_CreateAccount">REGISTRARSE</string>
    <string name="title_main_ToDo">¿Qué deseas hacer?</string>
    <string name="title_searchJob">Buscar un Trabajo</string>
    <string name="title_searchEmployees">Publicar Vacante</string>
    <string name="title_activity_user">Usuario</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_navdraw_profile">Perfil</string>
    <string name="title_navdraw_searchJob">Buscar Trabajo</string>
    <string name="title_navdraw_myEvents">Mis Eventos</string>
    <string name="title_navdraw_Pay">Pago</string>
    <string name="title_navdraw_settings">Configuración</string>
    <string name="title_navdraw_logoff">Cerrar Sesión</string>
    <string name="title_navdraw_option">Opciones</string>
    <string name="title_navdraw_profileBussiness">Perfil de Empresa</string>
    <string name="title_navdraw_bussinessContact">Contacto</string>
    <string name="title_navdraw_billingInfo">Información de Facturación</string>
    <string name="title_navdraw_publishJob">Publicar un Trabajo</string>
    <string name="title_navdraw_myEventsBussiness">Mis Eventos</string>
    <string name="title_navdraw_myOpEventsBussiness">Mis Eventos Abiertos</string>
    <string name="title_navdraw_settingsBussiness">Configuración</string>
    <string name="title_navdraw_openEvents">Cerrar Sesión</string>
    <string name="title_navdraw_optionBussiness">Opciones</string>
    <string name="action_settings">Configuración</string>
    <string name="title_MyInterests">Mis Intereses</string>
    <string name="title_MySkills">Mis Aptitudes</string>
    <string name="title_Success">La petición se realizó correctamente</string>
    <string name="title_Danger">Error al realizar la petición</string>
    <string name="title_Loading">Cargando datos...</string>
    <string name="title_activity_maps">Maps</string>
    <string name="title_fragment_profile">Perfil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps_user">Empresas Disponibles</string>
    <string name="apply">Trabajos aplicados</string>
    <string name="future_jobs">Trabajos Futuros</string>
    <string name="jobs_done">Trabajos Completos</string>
    <string name="approve_payment">Aprobados</string>
    <string name="total_payment">Total a Pagar:</string>
    <string name="method_payment">Metodo de pago</string>
    <string name="statistics_payment">Estadísticas</string>
    <string name="event_summary">Resumen Evento</string>
    <string name="title_description">Descripción</string>
    <string name="title_schedule">Horario</string>
    <string name="title_address">Dirección</string>
    <string name="title_city">Ciudad</string>
    <string name="title_state">Estado</string>
    <string name="title_zip">Código Postal</string>
    <string name="title_billing_contact">Contacto de facturación</string>
    <string name="title_activity_my_events">Mis Eventos</string>
    <string name="title_activity_create_company">Crear Empresa</string>
    <string name="title_company">EMPRESA</string>
    <string name="title_name">Nombre</string>
    <string name="title_confirm_password">Confirmar contraseña</string>
    <string name="title_confirm_create">CREAR CUENTA</string>
    <string name="title_activity_profile_company">Perfil Empresa</string>
    <string name="title_new_billing_company">Nuevo Método de Pago</string>
    <string name="title_credit_card">Tarjeta de Crédito</string>
    <string name="title_bank_account">Cuenta Bancaria</string>
    <string name="title_paypal">PayPal</string>
    <string name="title_or">O</string>
    <string name="title_cellphone_company">Celular</string>
    <string name="title_publish_job_company">Publicar Empleo</string>
    <string name="title_reference_name_job_company">Nombre Vacante</string>
    <string name="title_category_job_company">Categoría</string>
    <string name="title_task_job_company">Tareas a Realizar</string>
    <string name="title_requirments_job_company">Requerimientos</string>
    <string name="title_contact_name_company">Nombre Contacto</string>
    <string name="title_quantity_employments_company">Cantidad Empleados</string>
    <string name="title_job_address_company">Dirección de Empleo</string>
    <string name="title_start_date_company">Fecha de Inicio</string>
    <string name="title_start_time_company">Hora de Inicio</string>
    <string name="title_end_date_company">Fecha Final</string>
    <string name="title_end_time_company">Hora Final</string>
    <string name="title_payment_day_company">Pago Diario por Persona</string>
    <string name="title_summary">Resumen</string>
    <string name="title_date_time">Fecha y Hora</string>
    <string name="title_staff_number">Número de Staff</string>
    <string name="title_staff_accept">Aceptar Staff</string>
    <string name="title_staff_accepted">Aceptados</string>
    <string name="title_pick_start_date">Seleccione la fecha inicial</string>
    <string name="title_pick_end_date">Seleccione la fecha final</string>
    <string name="title_close">Cerrar</string>
    <string name="title_verify_account">Necesitamos verificar que el correo ingresado te pertenezca. Revisa tu bandeja de correo y sigue las instrucciones que fueron enviadas.</string>
    <string name="title_verify_account2">Si no ves el mensaje en la bandeja de entrada, asegurate que la dirección de correo este bien escrita y verifica la bandeja de correo spam. El mensaje fue enviado desde: dontreplay@catchmyshift.com</string>
    <string name="title_resend_verification">Reenviar correo de verificación</string>
</resources>