<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile_bussiness"
            android:icon="@drawable/profilevd"
            android:title="@string/title_navdraw_profileBussiness" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/contactvd"
            android:title="@string/title_navdraw_bussinessContact" />
        <item
            android:id="@+id/nav_billing_info"
            android:icon="@drawable/payvd"
            android:title="@string/title_navdraw_billingInfo" />
        <item
            android:id="@+id/nav_publish_job"
            android:icon="@drawable/publishvd"
            android:title="@string/title_navdraw_publishJob" />
        <item
            android:id="@+id/nav_myevents"
            android:icon="@drawable/myeventsvd"
            android:title="@string/title_navdraw_myEventsBussiness" />
        <item
            android:id="@+id/nav_myopenevents"
            android:icon="@drawable/publicvd"
            android:title="@string/title_navdraw_myOpEventsBussiness" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settingsvd"
            android:title="@string/title_navdraw_settings" />

        <item
            android:id="@+id/nav_logoff"
            android:icon="@drawable/backvd"
            android:title="@string/title_navdraw_logoff" />
    </group>

</menu>
