<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/profilevd"
            android:title="@string/title_navdraw_profile" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/searchvd"
            android:title="@string/title_navdraw_searchJob" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/payvd"
            android:title="@string/title_navdraw_Pay" />
        <item
            android:id="@+id/nav_myevents"
            android:icon="@drawable/myeventsvd"
            android:title="@string/title_navdraw_myEvents" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/settingsvd"
            android:title="@string/title_navdraw_settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
