<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="catchmyshift.catchmyshift.fragment.PaymentFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/title_navdraw_Pay"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bgnd_payment_color2"
            android:orientation="horizontal"
            >


            <Button
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:text="@string/statistics_payment"
                android:background="@drawable/bgnd_payment_color2"
                android:textColor="#FFFFFF"
                />
            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textSize="12sp"
                android:text="@string/approve_payment"
                android:background="@drawable/bgnd_payment_color1"
                android:textColor="#FFFFFF"
                />
            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textSize="12sp"
                android:text="@string/event_summary"
                android:background="@drawable/bgnd_payment_color1"
                android:textColor="#FFFFFF"
                />

        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/total_payment"
            android:gravity="center"
            android:textSize="25sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="$550.00"
            android:textSize="27sp"
            android:textColor="#54795a"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|bottom"
            android:orientation="vertical"
            >

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:text="@string/method_payment"
                android:background="@drawable/bgnd_btn_accent2"
                android:textColor="#FFFFFF"
                />


        </LinearLayout>

    </LinearLayout>

</FrameLayout>
